--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==19.7.1
 Werkzeug==0.14.1
 Flask==0.12.2
 numpy==1.17.2
@@ -7,11 +8,3 @@ gevent
 pillow
 h5py
 gunicorn==19.7.1
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
-numpy>=1.9.2
-scipy>=0.15.1
-scikit-learn>=0.18
-matplotlib>=1.4.3
-pandas>=0.19
