--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,97 @@
-gunicorn==19.7.1
-Werkzeug==0.14.1
+absl-py==0.9.0
+appdirs==1.4.3
+astor==0.8.0
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.4
+certifi==2020.4.5.1
+cffi==1.14.0
+click==7.1.2
+colorama==0.4.3
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.0
+entrypoints==0.3
 Flask==0.12.2
-numpy==1.17.2
+gast==0.3.3
+gevent==20.5.0
+google-pasta==0.2.0
+greenlet==0.4.15
+grpcio==1.12.1
+gunicorn==19.7.1
+h5py==2.8.0
+imageio==2.8.0
+importlib-metadata==1.5.2
+ipykernel==5.1.4
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+itsdangerous==1.1.0
+jedi==0.17.0
+Jinja2==2.11.2
+joblib==0.15.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
 Keras==2.1.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.2.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mistune==0.8.4
+mkl-fft==1.0.0.17
+mkl-random==1.1.0
+mkl-service==2.3.0
+nbconvert==5.6.1
+nbformat==5.0.4
+notebook==6.0.3
+numpy==1.17.2
+opencv-python==4.2.0.34
+pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.7.0
+pickleshare==0.7.5
+Pillow==7.1.2
+prometheus-client==0.7.1
+prompt-toolkit==3.0.4
+protobuf==3.11.4
+pycparser==2.20
+Pygments==2.6.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2020.1
+pywin32==227
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==18.1.1
+qtconsole==4.7.3
+QtPy==1.9.0
+scikit-learn==0.23.1
+scipy==1.4.1
+Send2Trash==1.5.0
+six==1.14.0
+sklearn==0.0
+tensorboard==1.14.0
 tensorflow==1.14.0
-gevent
-pillow
-h5py
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+threadpoolctl==2.0.0
+tornado==6.0.4
+tqdm==4.46.0
+traitlets==4.3.3
+virtualenv==20.0.14
+wcwidth==0.1.9
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.5.1
+wincertstore==0.2
+wrapt==1.12.1
+zipp==3.1.0
